Fixed input box not completely visible in mobiles

--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -5,6 +5,7 @@ form {
 }
 .input {
   padding: 10px;
+  margin-top: 3rem;
   border-radius: 4px;
   border: 1px solid white;
   outline: none;
